/*
 * $Id: ChangeLog,v 1.4524 2005/10/26 20:07:16 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-27 00:07 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/compiler/harbour.sly
    ! Generate a line number PCODE for WITH OBJECT line.

2005-10-26 13:04 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    * More conservative processing in AnsiToSysString(), AnsiToWide(), & WideToAnsi()
    * Revised ANSITOWIDE() and WIDETOANSI() to use AnsiToWide() & WideToAnsi() instead of redundant code
    * Exported AnsiToSysString(), AnsiToWide(), & WideToAnsi()

2005-10-26 22:55 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/gtwvw/samples/wvwtest9.bat
  * contrib/gtwvw/samples/wvwtest9.bc
  * contrib/gtwvw/samples/wvwtest9.rsp
  * contrib/gtwvw/samples/wvwtest9.prg
    * Some corrections, thanks to Massimo Belgrano.

2005-10-26 01:50 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * tests/ads.prg
  * tests/datad.prg
  * tests/files.prg
  * tests/testrdd.prg
    * Removed unneeded RddRegister( "ADS", 1 ) and adjusted calls to
      RddSetDefault()

     fixes supplied by Massimo Belgrano on the NG -- Thanks!


2005-10-26 01:30 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * contrib/rdd_ads/ads1.c
  * contrib/rdd_ads/adsfunc.c
    * added AdsGetHandleType()

    ! Completely re-worked Connection handling. The array of connections
      is gone as a simpler way was found. There are no more "indexes",
      and all connection handling is via real connection handles.

  * tests/datad.prg
    * updated and expanded this Demo of ADS Connection handling
  * contrib/rdd_ads/ads.ch
    * added connection types

2005-10-26 09:10 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     * aColumnsSep moved to public section (as per group decision) and